fix side-cart to show on top of the search suggestions on mobile devices

--- a/source/stylesheets/components/_side-cart.scss
+++ b/source/stylesheets/components/_side-cart.scss
@@ -1,5 +1,6 @@
 // scren backdrop
 body.woofc-body-show .woofc-overlay {
+  z-index: 1000000000;
   background-color: rgba(0, 0, 0, .5);
 }
 
@@ -11,6 +12,7 @@ body.woofc-body-show .woofc-overlay {
 
 // container
 .woofc-area.woofc-effect-01 {
+  z-index: 1000000001;
   max-width: 100%;
   height: 100%;
 
